// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Inline /> should match snapshot for custom element dividers 1`] = `
<div
  class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_wrap 2_mobile_base"
>
  <div
    class="block 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <span
      class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      A
    </span>
    <div
      class="block 2_mobile_base 2_mobile_base"
    >
      <div>
        divider
      </div>
    </div>
  </div>
  <div
    class="block 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <span
      class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      B
    </span>
    <div
      class="block 2_mobile_base 2_mobile_base"
    >
      <div>
        divider
      </div>
    </div>
  </div>
  <div
    class="block 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <span
      class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      C
    </span>
  </div>
</div>
`;

exports[`<Inline /> should match snapshot for default dividers 1`] = `
<div
  class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_wrap 2_mobile_base"
>
  <div
    class="block 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <span
      class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      A
    </span>
    <div
      class="block 2_mobile_base 2_mobile_base"
    >
      <span
        class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        •
      </span>
    </div>
  </div>
  <div
    class="block 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <span
      class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      B
    </span>
    <div
      class="block 2_mobile_base 2_mobile_base"
    >
      <span
        class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
      >
        •
      </span>
    </div>
  </div>
  <div
    class="block 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <span
      class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      C
    </span>
  </div>
</div>
`;

exports[`<Inline /> should match snapshot for no dividers 1`] = `
<div
  class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_wrap 2_mobile_base 2_mobile_base"
>
  <div
    class="block 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <span
      class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      A
    </span>
  </div>
  <div
    class="block 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <span
      class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      B
    </span>
  </div>
  <div
    class="block 2_mobile_base 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <span
      class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      C
    </span>
  </div>
</div>
`;

exports[`<Inline /> should not be able to render components 1`] = `
<div
  class="block display_flex position_relative center_mobile_base row_mobile_base flexWrap_wrap 2_mobile_base"
>
  <div
    class="block 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <span
      class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      A
    </span>
    <div
      class="block 2_mobile_base 2_mobile_base"
    >
      <div>
        divider component from test
      </div>
    </div>
  </div>
  <div
    class="block 2_mobile_base display_flex center_mobile_base row_mobile_base flexWrap_nowrap"
  >
    <span
      class="inlineText textAlign_left root_base inlineText colours_neutral_base fontWeight_normal_base sizes_4_base"
    >
      B
    </span>
  </div>
</div>
`;
